--- a/Cluster_Analysis_Task.ipynb
+++ b/Cluster_Analysis_Task.ipynb
@@ -33,7 +33,7 @@
         "FBh7lEn3hdBL",
         "qbm-PImVfTMH"
       ],
-      "authorship_tag": "ABX9TyOAVPeOEs5oVs7oXAgnon31",
+      "authorship_tag": "ABX9TyPal7ATLB2vAJymtXc51bKr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
       },
       "source": [
         "\n",
-        "Dataset ini merupakan data pelanggan mall diperoleh dari \"*Mall Customer Segmentation Data*”. Data set cust Marketing yang digunakan memiliki 5 atribut dan 200 objek data. Berikut adalah penjelasan informasi atribut:"
+        "Dataset ini merupakan data pelanggan mall diperoleh dari *Mall Customer Segmentation Data*. Data set cust Mall yang digunakan memiliki 5 atribut dan 200 objek data. Berikut adalah penjelasan informasi atribut:"
       ]
     },
     {
